better Dtos separation
