# app/Modules/User/Dto/CreateUserData.php
@@ -4,11 +4,11 @@ namespace App\Modules\User\Dto;
 
 use Spatie\LaravelData\Data;
 
-class UserDto extends Data
+class CreateUserData extends Data
 {
     public string $name;
 
-    public ?string $password;
+    public string $password;
 
-    public ?string $email;
+    public string $email;
 }
