# app/Modules/User/Dto/UpdateUserData.php
@@ -1,0 +1,14 @@
+<?php
+
+namespace App\Modules\User\Dto;
+
+use Spatie\LaravelData\Data;
+
+class UpdateUserData extends Data
+{
+    public ?string $name;
+
+    public ?string $password;
+
+    public ?string $email;
+}
